2010-05-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Sanitize the test suite to prepare for the new compiler.

	* 0_slc/2_usegp/crdefaults.c,
	* 0_slc/1_createargs/argshadow.c,
	* 0_slc/1_create/cr1.c: Remove references to the family ID.

	* 0_slc/1_create/fididreuse.c: Remove (feature not supported any
	more).

	* 0_slc/4_vlas/idxvla.c: Place test into separate thread function
	than `t_main', since the latter may not have a thread index.

2010-04-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update copyright notice of files changed in 2010.

	* 0_slc/1_createargs/useexit2.c,
	* 2_lib/assert.c,
	* 2_lib/clock.c,
	* 2_lib/div/div.c,
	* 2_lib/div/div2.c,
	* 2_lib/malloc/m1.c,
	* 2_lib/malloc/m2.c,
	* 2_lib/perf.c,
	* 2_lib/sac1.c: Add 2010 to copyright notice.

2010-04-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Sanitize the test suite.

	* 0_slc/1_create/fididreuse.c: Do not use `sl_kill' in test, since
	the test is about something else.

	* 0_slc/1_createargs/useexit2.c: Ignore test for now, since
	neither `break' nor `kill' is properly implemented everywhere yet.

	* 0_slc/4_funcalls/add.c: Remove. The `sl_funcall' syntax is
	deprecated.

2010-04-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix one unit test.

	* 2_lib/malloc/m2.c: Fix bug in array access.

2010-02-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the unit test suite.

	* 2_lib/va2.c,
	* 2_lib/va3.c: New.

	* 2_lib/assert.c,
	* 2_lib/clock.c,
	* 2_lib/div/div.c,
	* 2_lib/div/div2.c,
	* 2_lib/malloc/m1.c,
	* 2_lib/malloc/m2.c,
	* 2_lib/malloc/m3.c,
	* 2_lib/perf.c,
	* 2_lib/sac1.c: Update to use the latest SL library changes.

2010-01-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the unit test suite.

	* 2_lib/va.c: New.

2010-01-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the unit test suite.

	* 0_slc/0_trival/ws.c,
	* 0_slc/1_createargs/ws2.c,
	* 0_slc/1_createargs/ws3.c: Check handling of whitespace in
	thread function declarations, `sl_setp' and `sl_getp'.
