@@ -1,7 +1,7 @@
 //
 // avail.c: this file is part of the SL toolchain.
 //
-// Copyright (C) 2009 Universiteit van Amsterdam.
+// Copyright (C) 2009,2010 Universiteit van Amsterdam.
 //
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -27,11 +27,10 @@ typedef struct {
 
 #define MAX_TESTS 1000
 data_t values[MAX_TESTS];
-int i = 0, p = 0;
+int p = 0;
 
 sl_def(do_test, void)
 {
-  int j;
 #define x values[p].d
 #define xf values[p].f
 #define y values[p+1].d
@@ -39,25 +38,35 @@ sl_def(do_test, void)
 #define n values[p+2].i
 #define nl values[p+2].l
 
-#define call1(F)				\
-  values[i].desc = #F;				\
-  values[i++].d = F(x); p++;			\
-  values[i].desc = #F "f";			\
-  values[i++].f = F ## f (xf); p++;
-#define call1i(F)				\
-  values[i].desc = #F;				\
-  values[i++].i = F(x); p++
+#define call1(F)                                 \
+  values[p].desc = #F;                           \
+  values[p].d = F(x);                            \
+  ++p;                                           \
+  values[p].desc = #F "f";                       \
+  values[p].f = F ## f (xf);                     \
+  ++p
 
-#define call2(F)				\
-  values[i].desc = #F;				\
-  values[i++].d = F(x, y); p+=2;		\
-  values[i].desc = #F "f";			\
-  values[i++].f = F ## f (xf, yf); p+=2
-#define call2i(F)				\
-  values[i].desc = #F;				\
-  values[i++].i = F(x, y); p+=2;		\
-  values[i].desc = #F "f";			\
-  values[i++].i = F(xf, yf); p+=2
+
+#define call1i(F)				\
+  values[p].desc = #F;				\
+  values[p].i = F(x);                           \
+  ++p
+
+#define call2(F)                                  \
+  values[p].desc = #F;                            \
+  values[p].d = F(x, y);                          \
+  p += 2;                                         \
+  values[p].desc = #F "f";                        \
+  values[p].f = F ## f (xf, yf);                  \
+  p += 2
+
+#define call2i(F)                                 \
+  values[p].desc = #F;                            \
+  values[p].i = F(x, y);                          \
+  p += 2;                                         \
+  values[p].desc = #F "f";                        \
+  values[p].i = F(xf, yf);                        \
+  p += 2
 
   /* classify */
   call1i(fpclassify);
@@ -89,22 +98,23 @@ sl_def(do_test, void)
   call1(exp2);
   call1(expm1);
 
-  j = i++;
-  values[j].desc = "frexp";
-  values[j].d = frexp(x, &values[i++].i); p++;
-  j = i++;
-  values[j].desc = "frexpf";
-  values[j].f = frexpf(xf, &values[i++].i); p++;
+  values[p].desc = "frexp";
+  values[p].d = frexp(x, &values[p+1].i);
+  p += 2;
 
-  values[i].desc = "ilogb";
-  values[i++].i = ilogb(x); p++;
-  values[i].desc = "ilogbf";
-  values[i++].i = ilogbf(xf); p++;
+  values[p].desc = "frexpf";
+  values[p].f = frexpf(xf, &values[p+1].i);
+  p += 2;
 
-  values[i].desc = "ldexp";
-  values[i++].d = ldexp(x, n); p+=3;
-  values[i].desc = "ldexpf";
-  values[i++].f = ldexpf(xf, n); p+=3;
+  values[p].desc = "ilogb";
+  values[p].i = ilogb(x); p++;
+  values[p].desc = "ilogbf";
+  values[p].i = ilogbf(xf); p++;
+
+  values[p].desc = "ldexp";
+  values[p].d = ldexp(x, n); p+=3;
+  values[p].desc = "ldexpf";
+  values[p].f = ldexpf(xf, n); p+=3;
 
   call1(log);
   call1(log10);
@@ -112,22 +122,23 @@ sl_def(do_test, void)
   call1(log2);
   call1(logb);
 
-  j = i++;
-  values[j].desc = "modf";
-  values[j].d = modf(x, &values[i++].d); p++;
-  j = i++;
-  values[j].desc = "modff";
-  values[j].f = modff(xf, &values[i++].f); p++;
+  values[p].desc = "modf";
+  values[p].d = modf(x, &y); 
+  p += 2;
 
-  values[i].desc = "scalbn";
-  values[i++].d = scalbn(x, n); p+=3;
-  values[i].desc = "scalbnf";
-  values[i++].f = scalbnf(xf, n); p+=3;
+  values[p].desc = "modff";
+  values[p].f = modff(xf, &yf);
+  p += 2;
 
-  values[i].desc = "scalbln";
-  values[i++].d = scalbln(x, nl); p+=3;
-  values[i].desc = "scalblnf";
-  values[i++].f = scalblnf(xf, nl); p+=3;
+  values[p].desc = "scalbn";
+  values[p].d = scalbn(x, n); p+=3;
+  values[p].desc = "scalbnf";
+  values[p].f = scalbnf(xf, n); p+=3;
+
+  values[p].desc = "scalbln";
+  values[p].d = scalbln(x, nl); p+=3;
+  values[p].desc = "scalblnf";
+  values[p].f = scalblnf(xf, nl); p+=3;
 
   /* power/abs */
 
@@ -141,32 +152,32 @@ sl_def(do_test, void)
   call1(erf);
   call1(erfc);
   call1(lgamma);
-  call1(tgamma);
+  call1(tgamma); 
   call1(ceil);
   call1(floor);
   call1(nearbyint);
   call1(rint);
   call1(lrint);
 
-  values[i].desc = "lrint";
-  values[i++].l = lrint(x); p++;
-  values[i].desc = "lrintf";
-  values[i++].l = lrintf(xf); p++;
-  values[i].desc = "llrint";
-  values[i++].ll = llrint(x); p++;
-  values[i].desc = "llrintf";
-  values[i++].ll = llrintf(xf); p++;
+  values[p].desc = "lrint";
+  values[p].l = lrint(x); p++;
+  values[p].desc = "lrintf";
+  values[p].l = lrintf(xf); p++;
+  values[p].desc = "llrint";
+  values[p].ll = llrint(x); p++;
+  values[p].desc = "llrintf";
+  values[p].ll = llrintf(xf); p++;
 
   call1(round);
 
-  values[i].desc = "lround";
-  values[i++].l = lround(x); p++;
-  values[i].desc = "lroundf";
-  values[i++].l = lroundf(xf); p++;
-  values[i].desc = "llround";
-  values[i++].ll = llround(x); p++;
-  values[i].desc = "llroundf";
-  values[i++].ll = llroundf(xf); p++;
+  values[p].desc = "lround";
+  values[p].l = lround(x); p++;
+  values[p].desc = "lroundf";
+  values[p].l = lroundf(xf); p++;
+  values[p].desc = "llround";
+  values[p].ll = llround(x); p++;
+  values[p].desc = "llroundf";
+  values[p].ll = llroundf(xf); p++;
 
   call1(trunc);
 
@@ -174,21 +185,19 @@ sl_def(do_test, void)
   call2(fmod);
   call2(remainder);
 
-  j = i++;
-  values[j].desc = "remquo";
-  values[j].d = remquo(x, y, &values[i++].i); p+=2;
-  j = i++;
-  values[j].desc = "remquof";
-  values[j].f = remquof(xf, yf, &values[i++].i); p+=2;
+  values[p].desc = "remquo";
+  values[p].d = remquo(x, y, &values[p+1].i); p+=2;
+  values[p].desc = "remquof";
+  values[p].f = remquof(xf, yf, &values[p+1].i); p+=2;
 
   call2(copysign);
 
   /* nan */
 
-  values[i].desc = "nan";
-  values[i++].d = nan("");
-  values[i].desc = "nanf";
-  values[i++].f = nanf("");
+  values[p].desc = "nan";
+  values[p].d = nan(""); ++p;
+  values[p].desc = "nanf";
+  values[p].f = nanf(""); ++p;
 
   call2(nextafter);
 
@@ -196,10 +205,10 @@ sl_def(do_test, void)
   call2(fdim);
   call2(fmax);
   call2(fmin);
-  values[i].desc = "fma";
-  values[i++].d = fma(x, y, values[p+2].d); p+=3;
-  values[i].desc = "fmaf";
-  values[i++].d = fmaf(xf, yf, values[p+2].f); p+=3;
+  values[p].desc = "fma";
+  values[p].d = fma(x, y, values[p+2].d); p+=3;
+  values[p].desc = "fmaf";
+  values[p].d = fmaf(xf, yf, values[p+2].f); p+=3;
 
   /* comp */
   call2i(isgreater);
@@ -218,6 +227,9 @@ sl_enddef
 
 // XIGNORE: ppp*:D
 
+// SLT_RUN: x=.42 n=42
+// SLT_RUN: x=.1 n=10
+
 slr_decl(slr_var(double, x),
 	 slr_var(long, n));
 
@@ -231,6 +243,7 @@ sl_def(t_main, void)
   if (slr_len(n)) n = slr_get(n)[0];
 
   for(j = 0; j < MAX_TESTS; ++j) {
+    values[j].desc = 0;
     values[j].f = values[j].d = x;
     values[j].i = values[j].l = values[j].ll = n;
   }
@@ -240,50 +253,71 @@ sl_def(t_main, void)
 
   double_t xd = x;
   float_t xf = x;
+  output_string("dot forty two, d: ", 1);
   output_float(xd, 1, 4);
   output_char('\n', 1);
+  output_string("dot forty two, f: ", 1);
   output_float(xf, 1, 4);
   output_char('\n', 1);
+  output_string("HUGE_VAL: ", 1);
   output_float(HUGE_VAL, 1, 4);
   output_char('\n', 1);
+  output_string("HUGE_VALF: ", 1);
   output_float(HUGE_VALF, 1, 4);
   output_char('\n', 1);
+  output_string("INFINITY: ", 1);
   output_float(INFINITY, 1, 4);
   output_char('\n', 1);
+  output_string("NAN: ", 1);
   output_float(NAN, 1, 4);
   output_char('\n', 1);
-  output_int(FP_ILOGB0, 1);
+  output_string("FP_ILOGB0 // ilogb(0): ", 1);
+  output_int(FP_ILOGB0 == ilogb(0), 1);
   output_char('\n', 1);
-  output_int(FP_ILOGBNAN, 1);
+  output_string("FP_ILOGBNAN // ilogb(NAN): ", 1);
+  output_int(FP_ILOGBNAN == ilogb(NAN), 1);
   output_char('\n', 1);
+  output_string("M_2: ", 1);
   output_float(M_E, 1, 4);
   output_char('\n', 1);
+  output_string("M_LOG2E: ", 1);
   output_float(M_LOG2E, 1, 4);
   output_char('\n', 1);
+  output_string("M_LOG10E: ", 1);
   output_float(M_LOG10E, 1, 4);
   output_char('\n', 1);
+  output_string("M_LN2: ", 1);
   output_float(M_LN2, 1, 4);
   output_char('\n', 1);
+  output_string("M_LN10: ", 1);
   output_float(M_LN10, 1, 4);
   output_char('\n', 1);
+  output_string("M_PI: ", 1);
   output_float(M_PI, 1, 4);
   output_char('\n', 1);
+  output_string("M_PI_2: ", 1);
   output_float(M_PI_2, 1, 4);
   output_char('\n', 1);
+  output_string("M_PI_4: ", 1);
   output_float(M_PI_4, 1, 4);
   output_char('\n', 1);
+  output_string("M_1_PI: ", 1);
   output_float(M_1_PI, 1, 4);
   output_char('\n', 1);
+  output_string("M_2_PI: ", 1);
   output_float(M_2_PI, 1, 4);
   output_char('\n', 1);
+  output_string("M_2_SQRTPI: ", 1);
   output_float(M_2_SQRTPI, 1, 4);
   output_char('\n', 1);
+  output_string("M_SQRT2: ", 1);
   output_float(M_SQRT2, 1, 4);
   output_char('\n', 1);
+  output_string("M_SQRT1_2: ", 1);
   output_float(M_SQRT1_2, 1, 4);
   output_char('\n', 1);
 
-  for (j = 0; j < i; ++j)
+  for (j = 0; j < p; ++j)
     {
       const char *d = 	   values[j].desc ? values[j].desc : ".";
       output_string(d, 1); output_char(' ', 1);
