@@ -1,7 +1,7 @@
 //
 // tgamma.c: this file is part of the SL toolchain.
 //
-// Copyright (C) 2009 Universiteit van Amsterdam.
+// Copyright (C) 2009,2010 Universiteit van Amsterdam.
 //
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -20,8 +20,9 @@ slr_decl(slr_var(double, x));
 
 // SLT_RUN: x=0
 // SLT_RUN: x=1
-// SLT_RUN: x=-1
-// SLT_RUN: x=42
+// SLT_RUN: x=.42
+// SLT_RUN: x=-.69
+// SLT_RUN: x=10
 
 // FIXME: uClibc's tgamma may be broken!
 // XIGNORE: ppp*:D
@@ -29,11 +30,13 @@ slr_decl(slr_var(double, x));
 sl_def(t_main, void)
 {
   double x = slr_get(x)[0];
+  double t1 = tgamma(x);
+  float t2 = tgammaf(x);
   output_float(x, 1, 4);
   output_char(' ', 1);
-  output_float(tgamma(x), 1, 4);
+  output_float(t1, 1, 4);
   output_char(' ', 1);
-  output_float(tgammaf(x), 1, 4);
+  output_float(t2, 1, 4);
   output_char('\n', 1);
 }
 sl_enddef
